<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/baseColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignments.session14.assignment3.UpdateContactActivity">

    <TextView
        android:id="@+id/old_detail_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_details_heading"
        android:textColor="@color/secondColor"
        android:textSize="@dimen/text_dim"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_old_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondColor"
        android:text="@string/et_name"
        android:textSize="@dimen/text_dim"
        android:layout_below="@+id/old_detail_heading"/>


    <TextView
        android:id="@+id/tv_old_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondColor"
        android:text="@string/et_mb"
        android:layout_below="@+id/tv_old_name"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_old_mobile"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_details_heading"
            android:textStyle="bold"
            android:textColor="@color/secondColor"
            android:textSize="@dimen/text_dim" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/secondColor"
                android:text="@string/et_mb"
                android:textSize="@dimen/text_dim" />

            <EditText
                android:id="@+id/et_new_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/fourthColor"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="@dimen/text_dim"
                android:hint="@string/et_mb_hint"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_update_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_dim"
            android:background="@color/thirdColor"
            android:paddingLeft="@dimen/margin_dim"
            android:paddingRight="@dimen/margin_dim"
            android:text="@string/update_btn" />

    </LinearLayout>

</RelativeLayout>
